--- a/Small Biz Website/about.html
+++ b/Small Biz Website/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Crazy Bob's Pumpkin Patch</title>
-        <link href="css/B5_style.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
         <div id="container">
@@ -12,7 +12,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a class="active" href="about.html">About</a></li>
                     <li><a href="produce.html">Product</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
