--- a/Small Biz Website/contact.html
+++ b/Small Biz Website/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Crazy Bob's Pumpkin Patch</title>
-        <link href="css/B5_style.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
         <div id="container">
@@ -14,7 +14,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="produce.html">Product</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a class="active" href="contact.html">Contact</a></li>
                 </ul>
             </nav>
             <!-- Webpage Content -->
