--- a/Small Biz Website/index.html
+++ b/Small Biz Website/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
     <head>
         <title>Crazy Bob's Pumpkin Patch</title>
+        
         <link href="css/style.css" rel="stylesheet">
+        
+        <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Domine|Nosifer|Shrikhand" rel="stylesheet"> 
     </head>
     <body>
         <div id="container">
