Updated style.css and contact page

--- a/Small Biz Website/contact.html
+++ b/Small Biz Website/contact.html
@@ -22,8 +22,8 @@
             </nav>
             <!-- Webpage Content -->
             <div id="content">
-                <h2>Contact Information</h2>
-                <form>
+                <h2 id="h2-contact">Contact Information</h2>
+                <form id="form-contact">
                     First Name:<br>
                     <input type="text" name="first-name">
                     <br>
@@ -36,7 +36,10 @@
                     <br>
                     Message:<br>
                     <textarea name="message" rows="15" cols="50"></textarea>
+                     <br>                 
+                    <button>Send</button>
                 </form>
+                
             
             </div>
             <footer>Copyright&copy; 2017 Crazy Bob LLC.</footer>
